fixed login button position on mobile

--- a/src/components/LoggedInfo/LoggedInfo.module.css
+++ b/src/components/LoggedInfo/LoggedInfo.module.css
@@ -3,3 +3,10 @@
     top: 15px;
     right: 15px;
 }
+
+@media only screen and (max-width: 767px) {
+    .loggedInfo {
+        top: auto;
+        bottom: 15px;
+    }
+}
